# CrewAI-Agent-Boilerplate

./: .env.exemple  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: main.yaml  pre_commit.yaml
db/: chroma.sqlite3
notebooks/: YouTube.ipynb
src/: crew.py  main.py  youtube_search_experiment.py  youtube_search_experiment2.py
src/agents/: ResearcherAgent.py  researcher_agent.py  transcript_extractor_agent.py
src/config/: agents.yaml
src/crew_blog/: main.py
src/crew_blog/tools/: custom_tool.py
src/tools/: transcript_extractor_tool.py
src/ui/: chat.py
tests/: test_researcher_agent.py  test_transcript_extractor_tool.py
